@@ -1601,3 +1601,6 @@ ATS V1.5:
 
     MAPREDUCE-6639. Process hangs in LocatedFileStatusFetcher if FileSystem.get
     throws. (Ryan Blue via stevel)
+
+    HADOOP-12472. Make GenericTestUtils.assertExceptionContains robust. (Steve
+    Loughran via jing9)
